--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,36 @@
-name: Cypress headless
-on: [push]
+ name: Create Cypress report
+on:
+  push:
+    branches:
+      - 'master'
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v2
-        with:
-          browser: chrome
-          headless: true
+  cypress-e2e-chrome81:
+  name: Run on Chrome 81
+  runs-on: ubuntu-18.04
+  container: cypress/browsers:node14.17.0-chrome88-ff89
+  steps:
+    - uses: actions/checkout@v2
+    - name: Install a project with a clean slate
+      run: |
+        npm ci
+        $(npm bin)/cypress cache path
+        $(npm bin)/cypress cache list
+        $(npm bin)/cypress verify
+    - name: Run Cypress tests
+      run: npm run test:chrome
+      continue-on-error: true
+    - name: Copy test execution videos
+      run: |
+        mkdir public
+        cp -r cypress/videos public/videos
+    - name: Merge test results into one
+      run: npm run report:merge
+    - name: Generate HTML report
+      run: npm run report:generate
+    - name: Deploy report page
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
