--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress open",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "test:chrome": "cypress run --browser chrome",
+    "test:firefox": "cypress run --browser firefox",
+    "report:merge": "mochawesome-merge cypress/results/json/*.json > index.json",
+    "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
   },
   "author": "RadekM86",
   "license": "ISC",
   "devDependencies": {
     "@testing-library/cypress": "^8.0.0",
     "cypress": "^8.3.1",
-    "cz-conventional-changelog": "^3.3.0"
+    "cypress-multi-reporters": "^1.5.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "mocha": "^9.1.1",
+    "mochawesome": "^6.2.2",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^5.2.0"
   },
   "config": {
     "commitizen": {
